removed horizontal scrolling issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,9 @@
 /* Elements */
 
 html { 
-scroll-behavior: smooth;
+    scroll-behavior: smooth;
+    overflow-y: scroll;
+    overflow-x: hidden;
 } 
 
 
